# Android_dobby

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/cn/my/dobby_study/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/cn/my/dobby_study/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/my/dobby_study/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
